# Aura

./: .gitignore  AGENTS.md  CLAUDE.md  MONOREPO.md  README.md  apply_brutalism.js  index.html  netlify.toml  package-lock.json  package.json  skills-lock.json  tsconfig.json  useTreeManager-benchmark.ts  vite.config.js
.github/workflows/: release-desktop.yml
.opencode/plans/: markdown-preview-pane.md
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/web/: benchmark.cjs  eslint.config.js  package.json  vite.config.js
apps/web/netlify/: dev-server.js
apps/web/src/: App.tsx  index.css  types.ts
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: chat.rs  lib.rs
netlify/functions/: chat.ts
src/: App.jsx  App.tsx  index.css
src/components/: AccentPicker.jsx  AccentPicker.tsx  AuthModal.jsx  AuthModal.tsx  CommandPalette.jsx  DailyHeader.jsx  DailyHeader.tsx  EditorTopBar.jsx  EditorTopBar.tsx  Icon.jsx  Icon.tsx  LandingPage.jsx  LandingPage.tsx  LiveMarkdownEditor.jsx  LiveMarkdownEditor.test.jsx  LiveMarkdownEditor.tsx  MobileActionBar.tsx  MobileEditorToolbar.tsx  NoteEditor.jsx  NoteEditor.tsx  SettingsMenu.tsx  Sidebar.jsx  Sidebar.tsx  TableBubbleMenu.jsx  TableBubbleMenu.tsx  TagInput.jsx  TagInput.tsx
src/contexts/: AuthContext.jsx
src/editor/core/: editorCommands.js  editorCommands.ts  (+2 more)
src/lib/: notesDb.js
src/utils/: editorCommands.js  editorCommands.ts  knowledgeBase.js  noteMeta.js  tree.js  tree.test.ts  tree.ts
(+124 files in other folders)
